--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
     <div class = "grid" id = "my-node"></div>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js'></script>
     <script src = "https://cdn.jsdelivr.net/npm/dom-to-image@2.6.0/dist/dom-to-image.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
